@@ -5,12 +5,10 @@
  */
 package userinterface.PatientView;
 
-import Business.Appointment.AppointmentDirectory;
 import Business.DB4OUtil.DB4OUtil;
 import Business.EcoSystem;
 import Business.Enterprise.Enterprise;
 import Business.Network.Network;
-import Business.Role.Role;
 import Business.UserAccount.UserAccount;
 import java.util.Date;
 import javax.swing.JOptionPane;
@@ -49,6 +47,7 @@ public class BookAnAppointmentPanel extends javax.swing.JPanel {
     }
     
     public void populateHospitals(Network network) {
+        cmbBoxEnterpriseList.removeAll();
         for (Enterprise e: network.getEnterpriseDirectory().getEnterpriseList()) {
            // System.out.println(e.getEnterpriseType().toString());
             if (e.getEnterpriseType() == Enterprise.EnterpriseType.MedicalServices) {
@@ -120,11 +119,6 @@ public class BookAnAppointmentPanel extends javax.swing.JPanel {
         cmbBoxEnterpriseList.setFont(new java.awt.Font("SansSerif", 1, 13)); // NOI18N
         cmbBoxEnterpriseList.setForeground(new java.awt.Color(25, 56, 82));
         cmbBoxEnterpriseList.setModel(new javax.swing.DefaultComboBoxModel(new String[] { "Select Hospital" }));
-        cmbBoxEnterpriseList.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                cmbBoxEnterpriseListActionPerformed(evt);
-            }
-        });
 
         txtName.setBorder(null);
         txtName.addActionListener(new java.awt.event.ActionListener() {
@@ -215,7 +209,7 @@ public class BookAnAppointmentPanel extends javax.swing.JPanel {
 
     private void btnBookAppointmentActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnBookAppointmentActionPerformed
         // TODO add your handling code here:
-        if(txtName.getText().isBlank())
+        if(txtName.getText().trim().isEmpty())
         {
             JOptionPane.showMessageDialog(this, "Please enter your name!");
             return;
@@ -233,7 +227,7 @@ public class BookAnAppointmentPanel extends javax.swing.JPanel {
             return;
         }
         
-        if(txtIssue.getText().isBlank())
+        if(txtIssue.getText().trim().isEmpty())
         {
             JOptionPane.showMessageDialog(this, "Please enter your issue!");
             return;
@@ -242,16 +236,6 @@ public class BookAnAppointmentPanel extends javax.swing.JPanel {
         system.getAppointmentDirectory().createAppointment(user, null, "Pending", txtIssue.getText(), new Date(), true, null);
         JOptionPane.showMessageDialog(this, "Appointment successfully created!");
     }//GEN-LAST:event_btnBookAppointmentActionPerformed
-
-    private void cmbBoxEnterpriseListActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_cmbBoxEnterpriseListActionPerformed
-        // TODO add your handling code here:
-        
-        try {
-            populateHospitals((Network) networkCmbBox.getSelectedItem());
-        } catch (Exception e) {
-           // System.out.println("Choose correct option");
-        }
-    }//GEN-LAST:event_cmbBoxEnterpriseListActionPerformed
 
     private void txtNameActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_txtNameActionPerformed
         // TODO add your handling code here:
